// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Spacer ⚠️  With margin 1`] = `
<div
  className="sc-jqCOkK eSGjvK"
>
  <div
    className="sc-kafWEX jYWYEz"
  >
    <p
      className="sc-bxivhb iyjEP"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer ⚠️  With padding 1`] = `
<div
  className="sc-kafWEX jYWYEz"
>
  <div
    className="sc-jqCOkK jMfdRS"
  >
    <p
      className="sc-bxivhb iyjEP"
    >
      This has padding.
    </p>
  </div>
</div>
`;
